# plotter-studio-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: paper_inventory_template.csv  pen_inventory_template.csv
src/monet_mcp/: __init__.py  camera.py  inventory.py  plotter.py  server.py  svg_utils.py  webhook.py
src/plotter_studio/: __init__.py  camera.py  filestore.py  plotter.py  server.py  webhook.py
tests/: test_plotter_state.py  test_svg_utils.py
