[project]
name = "monet-mcp"
version = "0.1.0"
description = "An MCP server that gives Claude eyes and a robotic arm via an AxiDraw pen plotter"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "pyaxidraw",
    "opencv-python",
    "openpyxl",
    "Pillow",
]

[project.scripts]
monet = "monet_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monet_mcp"]
