[project]
name = "plotter-studio-mcp"
version = "0.2.0"
description = "An MCP server for pen plotter art creation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "nextdraw-api @ https://software-download.bantamtools.com/nd/api/nextdraw_api.zip",
    "opencv-python",
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.7",
]

[project.scripts]
plotter-studio = "plotter_studio.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plotter_studio"]
